feat: partial branchless

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ wgpu = { version = "=0.16.0", features = ["spirv", "vulkan-portability"] }
 winit = "0.28.3"
 pollster = "0.4"
 bytemuck = { version = "1.19", features = ["derive"] }
-glam = { version = "0.29", features = ["std"] }
+glam = { version = "0.29", features = ["std", "bytemuck"] }
 env_logger = "0.11"
 libm = "=0.2.10"
 ahash = "=0.7.8"
