--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ wgpu = { version = "=0.16.0", features = ["spirv", "vulkan-portability"] }
 winit = "0.28.3"
 pollster = "0.4"
 bytemuck = { version = "1.19", features = ["derive"] }
-glam = { version = "0.29", features = ["std", "bytemuck"] }
+glam = { version = "0.29", features = ["std", "bytemuck", "fast-math"] }
 env_logger = "0.11"
 libm = "=0.2.10"
 ahash = "=0.7.8"
@@ -16,6 +16,8 @@ wgpu-core = "=0.16.0"
 wgpu-hal = "=0.16.0"
 gpu-descriptor = "=0.2.0"
 raytracer-shared = { path = "shared" }
+bvh = "0.11.0"
+nalgebra = "0.33"
 gltf = { version = "1.4", features = [
     "KHR_materials_transmission", 
     "KHR_materials_ior", 
