--- a/shader/Cargo.toml
+++ b/shader/Cargo.toml
@@ -9,6 +9,6 @@ crate-type = [ "dylib"]
 
 [dependencies]
 spirv-std = { version = "0.9" }
-glam = { version = "0.29", default-features = false, features = ["libm", "bytemuck"] }
+glam = { version = "0.29", default-features = false, features = ["libm", "bytemuck", "fast-math", "scalar-math"] }
 bytemuck = { version = "1.19", features = ["derive"] }
 raytracer-shared = { path = "../shared", features = ["shader"] }
