--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bytemuck = { version = "1.14", features = ["derive"] }
 glam = { version = "0.29", default-features = false, features = ["bytemuck", "fast-math", "scalar-math"] } # no default features to avoid "std" getting enabled by default
+half = { version = "1.8", features = ["bytemuck", "num-traits"], default-features = false }
 
 # Optional spirv-std for shader compilation
 [dependencies.spirv-std]
